refactor: console in English
Translates the console feature (console, console.core, console.window) and its tests per the code-in-English glossary; the files were moved to their English names in the previous commit. On disk: folder xploits/console with history/, live.log/live.1.log, console.lock/pid/exit, console-errors.log and size.txt, as ConsoleFolder migrates them. live.log format version 3: header #xploits-console, reasons start/end, source console, English snapshot keys, exit value user; record letters R S J F P unchanged. Module name console, window title Xploits console, resource xploits/console/logo.ans. Also renames AutoPvp.neighbourhood/hotbarResources and the travel/sweep progress() accessors the snapshot collector calls, and adds shared/, XploitsAddon.java and console/ to the English guard (showNotice joins the player-literal check).